linking to slides

--- a/index.html
+++ b/index.html
@@ -58,9 +58,12 @@
     
 
     
-      <h2>Authors</h2>
-      <p>Phil Monroe (phil@philmonroe.com)</p>
-      <p>Kramer Straube (kstraube@gmail.com)</p>
+    <h2>Authors</h2>
+    <p>Phil Monroe (phil@philmonroe.com)</p>
+    <p>Kramer Straube (kstraube@gmail.com)</p>
+
+	<h2>Slides</h2>
+	<p>You can access the slides <a href="slides/static/index.html">here</a>.
 
 
     <h2>Download</h2>
