--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <p>Kramer Straube (kstraube@gmail.com)</p>
 
 	<h2>Slides</h2>
-	<p>You can access the slides <a href="slides/static/index.html">here</a>.
+	<p>You can access the slides <a href="slides.pdf">here</a>.
 
 
     <h2>Download</h2>
