make index look better

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
     h3 { text-align: center; color: #d3d8c8; }
     a { color: #d3d8c8; }
     .description { font-size: 1.2em; margin-bottom: 30px; margin-top: 30px; font-style: italic;}
-    .download { position: absolute; top: 25px; left: 1250px; }
+    .download { margin: auto; width: 200px; height: 100px; }
     pre { background: #000; color: #fff; padding: 15px;}
     hr { border: 0; width: 80%; border-bottom: 1px solid #aaa}
     .footer { text-align:center; padding-top:30px; font-style: italic; }
+		.clear{ clear: both;}
   </style>
 </head>
 
@@ -35,12 +36,7 @@
 
   <div id="container">
 
-    <div class="download">
-      <a href="https://github.com/phil-monroe/EEC-277---GPU-Face-Detect/zipball/master">
-        <img border="0" width="90" src="https://github.com/images/modules/download/zip.png"></a>
-      <a href="https://github.com/phil-monroe/EEC-277---GPU-Face-Detect/tarball/master">
-        <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
-    </div>
+
 
     <h1><a href="https://github.com/phil-monroe/EEC-277---GPU-Face-Detect">GPU Face Detection</a></br>
       <span class="small">by <a href="https://github.com/phil-monroe">phil-monroe</a> and <a href="https://github.com/kstraube">kstraube</a></span></h1>
@@ -70,8 +66,17 @@
     <p>
       You can download this project in either
       <a href="https://github.com/phil-monroe/EEC-277---GPU-Face-Detect/zipball/master">zip</a> or
-      <a href="https://github.com/phil-monroe/EEC-277---GPU-Face-Detect/tarball/master">tar formats.
+      <a href="https://github.com/phil-monroe/EEC-277---GPU-Face-Detect/tarball/master">tar</a> formats.
     </p>
+    <div class="download">
+      <a href="https://github.com/phil-monroe/EEC-277---GPU-Face-Detect/zipball/master">
+        <img border="0" width="90" src="https://github.com/images/modules/download/zip.png"></a>
+      <a href="https://github.com/phil-monroe/EEC-277---GPU-Face-Detect/tarball/master">
+        <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
+    </div>
+		<div class="clear">
+			
+		</div>
     <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
       by running:
       <pre>$ git clone git://github.com/phil-monroe/EEC-277---GPU-Face-Detect</pre>
